# ML-homework

./: 404.html  index.html  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  main.yml
docs/iris_knn/: assignment.md  co-workers.md  report.docx
scripts/: format.sh
search/: search_index.json
src/ml_homework/: iris_knn.py
src/ml_homework/math/: hello.ipynb
